sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:6: error: not found: value getNombreValeur
    for (i<-0 to getNombreValeur()-2){
                 ^